tests/parse-errors/issue056-comp-3.zir
fun comp f() {
  let s = 5 in { let t = s };  
  return t; 
}

let comp main = read[int] >>> write[int]
